src/objects/ACED_KPO_Metric__c.object
<CustomObject>
    <fields>
        <fullName>Affiliate__c</fullName>
        <inlineHelpText>This is a helptext for Affiliate</inlineHelpText>
        <label>Affiliate</label>
        <picklist>
            <controllingField>HUB__c</controllingField>
            <picklistValues>
                <fullName>ACE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulgaria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Croatia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cyprus &amp; Malta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Czech Republic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denmark</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>France</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Germany</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greece</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hungary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ireland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Macedonia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Montengro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Netherlands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Norway</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portugal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Romania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Serbia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Slovakia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Slovenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spain</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Asset_Activity__c</fullName>
        <inlineHelpText>This is a helptext for Asset/Activity</inlineHelpText>
        <label>Asset/Activity</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>$User.ACED_HUB__c</field>
                <operation>equals</operation>
                <valueField>ACED_Activity__c.Program__r.HUB__c</valueField>
            </filterItems>
            <filterItems>
                <field>$User.ACED_HUB__c</field>
                <operation>equals</operation>
                <value>ACE HUB</value>
            </filterItems>
            <infoMessage>Only activities belonging to same HUB will be displayed</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ACED_Activity__c</referenceTo>
        <relationshipLabel>KPO Metrics</relationshipLabel>
        <relationshipName>KPO_Metrics</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Baseline_Value__c</fullName>
        <description>Baseline Value</description>
        <inlineHelpText>This is a helptext for Baseline Value</inlineHelpText>
        <label>Baseline Value</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Load_Id__c</fullName>
        <label>Data Load Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Executed__c</fullName>
        <formula>IF( ISNULL( Normalized_Value__c )   , FALSE, TRUE)</formula>
        <label>Executed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Goal__c</fullName>
        <inlineHelpText>This is a helptext for Goal</inlineHelpText>
        <label>Goal</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HUB__c</fullName>
        <description>Defaults to Users HUB and cannot update across HUB&apos;s</description>
        <inlineHelpText>This is a helptext for HUB</inlineHelpText>
        <label>HUB</label>
        <picklist>
            <picklistValues>
                <fullName>ACE HUB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia HUB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada HUB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>France HUB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Germany HUB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italy HUB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spain HUB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UK HUB</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Importance__c</fullName>
        <defaultValue>1</defaultValue>
        <inlineHelpText>This is a helptext for Importance</inlineHelpText>
        <label>Importance</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KPO_Methodology__c</fullName>
        <inlineHelpText>This is a helptext for KPO Methodology</inlineHelpText>
        <label>KPO Methodology</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>KPO_Metric_Description__c</fullName>
        <inlineHelpText>This is a helptext for KPO Metric</inlineHelpText>
        <label>KPO Metric Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>KPO__c</fullName>
        <inlineHelpText>This is a helptext for KPO</inlineHelpText>
        <label>KPO</label>
        <referenceTo>ACED_KPO__c</referenceTo>
        <relationshipLabel>KPO Metrics</relationshipLabel>
        <relationshipName>KPO_Metrics</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Metric_Value__c</fullName>
        <inlineHelpText>This is a helptext for Metric Value</inlineHelpText>
        <label>Metric Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Normalized_Value__c</fullName>
        <inlineHelpText>This value is a calculated field based upon Metric entry relative to Baseline and Goal values entered on same record,  and will be a integer with a value of 0-100</inlineHelpText>
        <label>Normalized Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Executed_KPO_Metric__c</fullName>
        <formula>IF(Executed__c = TRUE, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># of Executed KPO Metric</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_KPO_Metrics__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># of KPO Metrics</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>KPO Metric</label>
    <nameField>
        <displayFormat>KM-{00000}</displayFormat>
        <label>KPO Metric ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>KPO Metrics</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ACED_KPO_Metric_Hub_Matching</fullName>
        <active>true</active>
        <description>User can only select Hub to which he belongs.</description>
        <errorConditionFormula>AND((TEXT($User.ACED_HUB__c)&lt;&gt;&apos;ACE HUB&apos;),IF(TEXT(HUB__c)&lt;&gt; TEXT($User.ACED_HUB__c),TRUE,FALSE))</errorConditionFormula>
        <errorDisplayField>HUB__c</errorDisplayField>
        <errorMessage>You cannot select Hub which you are not part of</errorMessage>
    </validationRules>
</CustomObject>